--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    height: 100%;
+}
+
 ul{
     list-style: none;
 }
@@ -24,6 +28,16 @@ header{
 .head-logo{
     font-size: 30px;
     font-weight: bold;
+}
+
+.fixed{
+    display: flex;
+    justify-content: space-around !important;
+    position: fixed;
+    width: 100% !important;
+    top: 0;
+    background-color: #fff;
+    z-index: 80;
 }
 
 .head{
@@ -95,7 +109,9 @@ header{
     z-index: 0;
 }
 
-
+.dashbord{
+    display: none;
+}
 .user{
     display: none;
 }
@@ -224,9 +240,6 @@ header{
 /* cart styling */
 
 .my-cart{
-    position: absolute;
-    right: 200px;
-    top: 90px;
     width: 750px;
     height: 400px;
     display: none;
@@ -292,6 +305,8 @@ tbody td{
 
 .order-item{
     display: flex;
+    justify-content: space-around;
+    margin-bottom: 8px;
 }
 
 .order-food-image, .order-food-image img{
@@ -332,7 +347,8 @@ tbody td{
     font-size: 23px;
 }
 
-#remove-order{
+.btn-mf
+{
     width: 50px;
     height: 40px;
     font-size: 19px;
@@ -390,6 +406,7 @@ tbody td{
 
 .payement-box h2{
     font-size: 17px;
+    margin-bottom: 2px;
 }
 .payement-block{  
     display: flex;
@@ -401,7 +418,7 @@ tbody td{
     width: 250px;
     display: flex;
     justify-content: space-around;
-    margin-top: 10px;
+    margin: 10px;
 }
 
 .bank{
@@ -434,8 +451,13 @@ tbody td{
     background-color: rgba(177, 171, 171, 0.39);
 }
 
+.total{
+    text-align: center;
+    margin-top: 15px;
+    font-size: 20px;
+}
 
- .payement input,.login-box input{
+ .payement-box input,.login-box input{
     margin: 8px 0;
     padding: 2px 5px;
     box-shadow: 1px 1px 2px black;
@@ -456,13 +478,19 @@ tbody td{
     margin-left: 4px;
     padding: 4px 6px;
 }
+#commander{
+    margin-left :70px
+}
+
+.payement-alert{
+    text-align: center;
+    font-size: 19px;
+    color: rgba(216, 26, 26, 0.95);
+}
 
 .my-orders{
     width: 1100px;
     height: 500px;
-    position: absolute;
-    top: 90px;
-    right: 80px;
     display: none;
     background-color: rgb(255, 255, 255);
     border: 1.8px solid rgb(236, 152, 26);
@@ -510,6 +538,7 @@ tbody td{
 
 .order{
     display: flex;
+    flex-wrap: wrap;
     padding: 10px 0;
     margin-bottom: 5px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.452);
@@ -555,18 +584,16 @@ tbody td{
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 0;
     background-color: rgba(0, 0, 0, 0.226);
     display: none;
+    z-index: 90;
 }
 
 .my-login{
     width: 650px;
     height: 335px;
     overflow: hidden;
-    position: absolute;
-    top: 95px;
-    right: 300px;
     display: none;
     background-color: rgb(255, 255, 255);
     border: 1.8px solid rgb(236, 152, 26);
@@ -641,7 +668,347 @@ tbody td{
     text-decoration: underline;
     font-size: 16px;
 }
+/* dashboard styling */
+.admin{
+    display: flex;
+}
 
+.mbar{
+    width: 250px;
+    margin: 20px;
+}
+
+.mbar h2{
+    font-weight: 500;
+    font-size: 30px;
+    color: chocolate;
+    margin-bottom: 20px;
+}
+
+.mbar li{
+    margin-bottom: 20px;
+    color: rgb(236, 152, 26);
+}
+
+.mbar-add button{
+    width: 240px;
+    padding: 5px;
+    font-size: 28px;
+    background-color: rgb(236, 152, 26);
+    border-radius: 10px;
+    margin-left: 2px;
+    margin-bottom: 20px;
+}
+
+.mbar li a{
+    color: rgb(236, 152, 26);
+}
+
+.maria{
+    width: 1000px;
+    margin-top: 80px;
+}
+
+.maria h1{
+    font-size: 26px;
+    font-weight: normal;
+    margin-bottom: 20px;
+    letter-spacing: 2px;
+}
+.dashead{
+    display: flex;
+    justify-content: space-around;
+}
+
+.itemcount{
+    width: 210px;
+    box-shadow: 1px 2px 2px black;
+    border-radius: 3px;
+}
+
+.itemcount h2{
+    margin-top: 0;
+    font-weight: bold;
+}
+
+.itemcount p{
+    text-align: right;
+    margin-right: 10px;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.dasmain{
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.box{
+    width: 450px;
+    height: 330px;
+    box-shadow: 2px 2px 4px black;
+    margin-bottom: 20px;
+    border-radius: 2px;
+    overflow-y: hidden;
+}
+
+.allorders{
+    width: 600px;
+}
+
+.allfoods{
+    width: 940px;
+}
+
+.allcomment{
+    width: 300px;
+}
+
+.all-orders, 
+.all-comments,
+.all-foods{
+    width: 100%;
+    height: 280px;
+    padding: 10px;
+    overflow-y: scroll;
+}
+
+.all-orders .order-item{
+    width: 560px;
+}
+
+.all-orders .order-item .order-food-image,
+.all-orders .order-item .order-food-info,
+.all-orders .order-item .quantite
+{
+    width : 160px; 
+    text-align: center;
+}
+
+.all-orders .order-item .order-food-info h1{
+    font-size: 22px;
+}
+
+.comment-info{
+    display: flex;
+    justify-content: space-around;
+    background-color: rgb(236, 152, 26);
+    padding: 5px 0;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+.profil{
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    background-color: white;
+    text-align: center;
+    line-height: 43px;
+    font-size: 30px;
+}
+
+.comment{
+    width: 200px;
+    font-size: 18px;
+    letter-spacing: 1px;
+    padding: 3px 5px;
+    word-wrap: break-word;
+}
+
+.header {
+    width: 940px;
+    height: 155px;
+    padding: 25px;
+    margin-left: 20px;
+}
+.inputs{
+    display: flex;
+    justify-content: space-around;
+}
+
+.inputs label{
+    font-size: 20px;
+}
+
+.inputs input{
+    height: 30px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    padding-left: 5px;
+    margin: 15px 0 15px 0;
+}
+
+.inputs .file{
+    width: 245px;
+    border-radius: 5px;
+    padding: 5px;
+    text-align: center;
+    background-color:  rgb(236, 152, 26);
+    
+}
+
+.inputs p:last-child input{
+    letter-spacing: normal;
+    font-size: 13px;
+}
+
+.btn-form{
+    padding: 6px 8px;
+    margin: 0 10px 8px 0;
+    border: none;
+    font-size: 18px;
+    border-radius: 3px;
+    box-shadow: 1px 1px 2px black;
+    background-color: rgb(236, 152, 26);
+    
+}
+
+.btn-close{
+    background-color: rgb(223, 60, 60);
+}
+
+.manage{
+    height: 860px;
+}
+
+.listfoods{
+    width: 940px;
+    margin-left: 20px;
+}
+
+.listfoods .table {
+    height: 600px;
+    overflow-y: auto;
+}
+
+.listfoods .thead .th{
+    width: 170px;
+}
+
+.listfoods .thead .th:first-child{
+    width: 560px;
+    padding-left: 5px;
+}
+
+.listfoods tbody tr td{
+    width: 170px;
+}
+
+.listfoods tbody tr td div{
+    justify-content: space-between !important;
+}
+
+.listfoods tbody tr td .order-food-info{
+    width: 300px;
+    text-align:  left;
+}
+.listfoods tbody tr .order-food-info p{
+    text-align:  left;
+    font-size: 21px;
+}
+.listfoods tbody tr td:first-child{
+    width: 560px;
+    text-align: left;
+}
+
+.manage-order ul{
+    width: 940px;
+}
+
+.list-orders-contener, .foodmanmain{
+    width: 950px;
+    height: 750px;
+    overflow: auto;
+}
+
+.account{
+    display: flex;
+    flex-wrap: wrap;
+    width: 940px;
+    margin-left: 20px;
+}
+
+.account .user-info{
+    width: 300px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow: 1px 1px 2px 1px black;
+    border-radius: 3px;
+    padding: 15px 0;
+    margin-right: 15px;
+}
+
+.account div:nth-child(3n){
+    margin-right: 0;
+}
+
+.account .user-name{
+    width: 150px;
+    height: 40px;
+    text-align: center;
+    padding-top: 5px;
+    font-size: 19px;
+}
+
+
+
+
+
+
+
+
+
+.flex{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.f-flex{
+    display: flex;
+    justify-content: space-around;
+    width: 450px;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.f-flex h1{
+    font-size: 23px;
+}
+
+.f-flex .order-food-info{
+    width: 180px;
+    text-align: left;
+}
+
+
+
+.incorrect{   
+    border-color: rgba(216, 26, 26, 0.9);
+}
+
+.incorrect:focus{
+    border-color: rgba(216, 26, 26, 0.9);
+}
+
+.correct {
+    border-color: rgba(93, 191, 68, 0.75);
+}
+
+.correct:focus {
+    border-color: rgba(93, 191, 68, 0.75);
+}
+
+
+.toggle{
+    position: fixed;
+    right: 25px;
+    top: 150px;
+    user-select: none;
+}
 
 .visibled{
     display: block;
@@ -650,4 +1017,9 @@ tbody td{
 .hidden{
     display: none;
 } 
+
+.fake{
+    width: 100%;
+    height: 85px;
+}
 
