--- a/styles/style.css
+++ b/styles/style.css
@@ -701,6 +701,7 @@ tbody td{
 }
 
 .mbar li a{
+    display: block;
     color: rgb(236, 152, 26);
 }
 
@@ -954,7 +955,35 @@ tbody td{
     font-size: 19px;
 }
 
+.confirm-action {
+    position: absolute;
+    height: auto;
+    width: auto;
+    max-width: 500px;
+    padding: 15px;
+    background-color: #fff;
+    text-align: center;
+    font-size: 20px;
+    top: 80px;
+    left: 550px;
+    word-wrap: break-word;
+}
 
+.confirm-action > div{
+    margin-bottom: 10px;
+}
+
+.confirm-action > div:first-child div{
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.confirm-action .food-image,
+.confirm-action .food-image img
+{
+    width: 250px;
+    height: 150px;
+}
 
 
 
@@ -1021,5 +1050,14 @@ tbody td{
 .fake{
     width: 100%;
     height: 85px;
+}
+
+.fade {
+    opacity: 0;
+    transition: opacity 0.2s;
+}
+
+.fade.in{
+    opacity: 1;
 }
 
